--- a/Irydae/Irydae.csproj
+++ b/Irydae/Irydae.csproj
@@ -64,6 +64,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Helpers\RelayCommand.cs" />
     <Compile Include="Ressources\BaseConverter.cs" />
     <Compile Include="Ressources\NullToBoolConverter.cs" />
     <Compile Include="Ressources\NullToVisibilityConverter.cs" />
@@ -73,11 +74,15 @@
     <Compile Include="ViewModels\CatchedPropertyChanged.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\PersonnageInfoViewModel.cs" />
+    <Compile Include="ViewModels\ProfilViewModel.cs" />
     <Compile Include="Views\AddPartenaireDialog.xaml.cs">
       <DependentUpon>AddPartenaireDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\AddPeriodeDialog.xaml.cs">
       <DependentUpon>AddPeriodeDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\AddProfileDialog.xaml.cs">
+      <DependentUpon>AddProfileDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\AddRpDialog.xaml.cs">
       <DependentUpon>AddRpDialog.xaml</DependentUpon>
@@ -112,6 +117,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\AddPeriodeDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\AddProfileDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -164,7 +173,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Images\Cartedumondesujet2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
