--- a/Irydae/Irydae.csproj
+++ b/Irydae/Irydae.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HtmlAgilityPack, Version=1.6.15.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>..\packages\HtmlAgilityPack.1.6.15\lib\Net45\HtmlAgilityPack.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -68,6 +72,7 @@
     <Compile Include="Ressources\BaseConverter.cs" />
     <Compile Include="Ressources\NullToBoolConverter.cs" />
     <Compile Include="Ressources\NullToVisibilityConverter.cs" />
+    <Compile Include="Services\HtmlWriterService.cs" />
     <Compile Include="Services\JournalService.cs" />
     <Compile Include="Services\ModificationStatusService.cs" />
     <Compile Include="ViewModels\AbstractPropertyChanged.cs" />
@@ -75,6 +80,7 @@
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\PersonnageInfoViewModel.cs" />
     <Compile Include="ViewModels\ProfilViewModel.cs" />
+    <Compile Include="ViewModels\ResultViewModel.cs" />
     <Compile Include="Views\AddPartenaireDialog.xaml.cs">
       <DependentUpon>AddPartenaireDialog.xaml</DependentUpon>
     </Compile>
@@ -92,6 +98,9 @@
     </Compile>
     <Compile Include="Views\PeriodeUserControl.xaml.cs">
       <DependentUpon>PeriodeUserControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\ResultDisplay.xaml.cs">
+      <DependentUpon>ResultDisplay.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\RpUserControl.xaml.cs">
       <DependentUpon>RpUserControl.xaml</DependentUpon>
@@ -136,6 +145,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\ResultDisplay.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\RpUserControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -175,6 +188,15 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\Cartedumondesujet2.png" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Web\index.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Web\style.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
