--- a/Irydae/Irydae.csproj
+++ b/Irydae/Irydae.csproj
@@ -92,9 +92,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Helpers\EnumExtension.cs" />
     <Compile Include="Helpers\OpenDialogCommand.cs" />
     <Compile Include="Helpers\RelayCommand.cs" />
+    <Compile Include="Model\Groupe.cs" />
     <Compile Include="Model\Options.cs" />
+    <Compile Include="Ressources\AmbientValueConverter.cs" />
     <Compile Include="Ressources\BaseConverter.cs" />
     <Compile Include="Ressources\NullToBoolConverter.cs" />
     <Compile Include="Ressources\NullToVisibilityConverter.cs" />
@@ -105,6 +108,7 @@
     <Compile Include="ViewModels\AbstractPropertyChanged.cs" />
     <Compile Include="ViewModels\CatchedPropertyChanged.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
+    <Compile Include="ViewModels\OptionsViewModel.cs" />
     <Compile Include="ViewModels\PersonnageInfoViewModel.cs" />
     <Compile Include="ViewModels\ProfilViewModel.cs" />
     <Compile Include="ViewModels\YesNoCancelDialogViewModel.cs" />
