--- a/Irydae/Irydae.csproj
+++ b/Irydae/Irydae.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Model\Options.cs" />
     <Compile Include="Ressources\AmbientValueConverter.cs" />
     <Compile Include="Ressources\BaseConverter.cs" />
+    <Compile Include="Ressources\BoolToVisibilityConverter.cs" />
     <Compile Include="Ressources\NullToBoolConverter.cs" />
     <Compile Include="Ressources\NullToVisibilityConverter.cs" />
     <Compile Include="Services\HtmlWriterService.cs" />
