--- a/Irydae/Irydae.csproj
+++ b/Irydae/Irydae.csproj
@@ -100,8 +100,10 @@
     <Compile Include="Ressources\AmbientValueConverter.cs" />
     <Compile Include="Ressources\BaseConverter.cs" />
     <Compile Include="Ressources\BoolToVisibilityConverter.cs" />
+    <Compile Include="Ressources\ColorToBrushConverter.cs" />
     <Compile Include="Ressources\NullToBoolConverter.cs" />
     <Compile Include="Ressources\NullToVisibilityConverter.cs" />
+    <Compile Include="Ressources\ScaleConverter.cs" />
     <Compile Include="Services\HtmlWriterService.cs" />
     <Compile Include="Services\JournalService.cs" />
     <Compile Include="Services\ModificationStatusService.cs" />
