--- a/Irydae/packages.config
+++ b/Irydae/packages.config
@@ -3,4 +3,5 @@
   <package id="Extended.Wpf.Toolkit" version="3.2.0" targetFramework="net451" />
   <package id="HtmlAgilityPack" version="1.6.15" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net451" />
+  <package id="WPFToolkit" version="3.5.50211.1" targetFramework="net451" />
 </packages>
