--- a/Irydae/Irydae.csproj
+++ b/Irydae/Irydae.csproj
@@ -104,14 +104,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Helpers\BindingProxy.cs" />
     <Compile Include="Helpers\EnumExtension.cs" />
     <Compile Include="Helpers\OpenDialogCommand.cs" />
     <Compile Include="Helpers\RelayCommand.cs" />
     <Compile Include="Model\Groupe.cs" />
     <Compile Include="Model\Options.cs" />
+    <Compile Include="Model\RpType.cs" />
     <Compile Include="Ressources\AmbientValueConverter.cs" />
     <Compile Include="Ressources\BaseConverter.cs" />
     <Compile Include="Ressources\BoolToVisibilityConverter.cs" />
+    <Compile Include="Ressources\NullableSelectionConverter.cs" />
     <Compile Include="Ressources\PercentWidthCornerRadiusConverter.cs" />
     <Compile Include="Ressources\PercentWidthConverter.cs" />
     <Compile Include="Ressources\ColorToBrushConverter.cs" />
