--- a/Irydae/Irydae.csproj
+++ b/Irydae/Irydae.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Ressources\AmbientValueConverter.cs" />
     <Compile Include="Ressources\BaseConverter.cs" />
     <Compile Include="Ressources\BoolToVisibilityConverter.cs" />
+    <Compile Include="Ressources\DescriptionToImagePathConverter.cs" />
     <Compile Include="Ressources\NullableSelectionConverter.cs" />
     <Compile Include="Ressources\PercentWidthCornerRadiusConverter.cs" />
     <Compile Include="Ressources\PercentWidthConverter.cs" />
