--- a/Irydae/Irydae.csproj
+++ b/Irydae/Irydae.csproj
@@ -111,10 +111,12 @@
     <Compile Include="Helpers\OpenDialogCommand.cs" />
     <Compile Include="Helpers\PartenaireEqualityComparer.cs" />
     <Compile Include="Helpers\RelayCommand.cs" />
+    <Compile Include="Model\DisplayMode.cs" />
     <Compile Include="Model\Groupe.cs" />
     <Compile Include="Model\Options.cs" />
     <Compile Include="Model\Personnage.cs" />
     <Compile Include="Model\RpType.cs" />
+    <Compile Include="Model\TypeRelation.cs" />
     <Compile Include="Ressources\AmbientValueConverter.cs" />
     <Compile Include="Ressources\BaseConverter.cs" />
     <Compile Include="Ressources\BoolToVisibilityConverter.cs" />
